UPDATE FirstDay ipynb

--- a/2018-09-13-FirstDay.ipynb
+++ b/2018-09-13-FirstDay.ipynb
@@ -1150,9 +1150,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apl', 'bnn', 'Chr'}\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = {\n",
     "    'apl': 'Apple',\n",
@@ -1160,7 +1168,8 @@
     "    'Chr': 'Cherry',\n",
     "}\n",
     "\n",
-    "fruits_set = set(fruits)"
+    "fruits_set = set(fruits)\n",
+    "print(fruits_set)"
    ]
   },
   {
