--- a/Code Golf.ipynb
+++ b/Code Golf.ipynb
@@ -799,6 +799,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "def run_function(a):\n",
+    "    def upper_function():\n",
+    "        return a.upper()\n",
+    "    return upper_function()\n",
+    "\n",
+    "print(run_function('c'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
