--- a/FirstClass, Closure, Decoration.ipynb
+++ b/FirstClass, Closure, Decoration.ipynb
@@ -570,8 +570,15 @@
    "source": [
     "## Decorator\n",
     "\n",
-    "![]"
+    "[DECORATOR](http://schoolofweb.net/blog/posts/%ED%8C%8C%EC%9D%B4%EC%8D%AC-%EB%8D%B0%EC%BD%94%EB%A0%88%EC%9D%B4%ED%84%B0-decorator/)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
