--- a/2018-09-18-FourthDay.ipynb
+++ b/2018-09-18-FourthDay.ipynb
@@ -719,13 +719,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Resturant(Shop):\n",
-    "    pa"
+    "    def show_info(self):\n",
+    "        string = f\"Shop ({self.name})\\n\\tResturant:{self.__shop_type}\\n\\tAddress:{self.address}\"\n",
+    "        print(string)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['SHOP_TYPE_LIST', '_Shop__shop_type', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'address', 'change_type', 'get_shop_type', 'name', 'set_shop_type', 'shop_type', 'show_info']\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Resturant' object has no attribute '_Resturant__shop_type'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-140-e1237e925eca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0msubway\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mResturant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Subway\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"resturant\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Sung su\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubway\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0msubway\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-138-fdad56dd76ae>\u001b[0m in \u001b[0;36mshow_info\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mResturant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mShop\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mshow_info\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mstring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"Shop ({self.name})\\n\\tResturant:{self.__shop_type}\\n\\tAddress:{self.address}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Resturant' object has no attribute '_Resturant__shop_type'"
+     ]
+    }
+   ],
+   "source": [
+    "subway = Resturant(\"Subway\", \"resturant\", \"Sung su\")\n",
+    "print(dir(subway))\n",
+    "subway.show_info()\n",
+    "# shop_type is private"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Shop:\n",
+    "    SHOP_TYPE_LIST = ['Sandwich', 'fastFood']\n",
+    "    \n",
+    "    def __init__(self, name, shop_type, address):\n",
+    "        self.name = name\n",
+    "        self._shop_type = shop_type\n",
+    "        self.address = address\n",
+    "        \n",
+    "    def show_info(self):\n",
+    "#         string = f\"Shop ({self.name})\\n\\tType:{self._shop_type}\\n\\tAddress:{self.address}\"\n",
+    "#         print(string)\n",
+    "        print(self.info)\n",
+    "        \n",
+    "    @property\n",
+    "    def info(self):\n",
+    "        string = f\"Shop ({self.name})\\n\\tType:{self._shop_type}\\n\\tAddress:{self.address}\"\n",
+    "        return string\n",
+    "        \n",
+    "    def change_type(self, shop_type):\n",
+    "        self._shop_type = shop_type\n",
+    "        \n",
+    "    def get_shop_type(self):\n",
+    "        return self._shop_type\n",
+    "    \n",
+    "    def set_shop_type(self, new_shop_type):\n",
+    "        if new_shop_type in self.SHOP_TYPE_LIST:\n",
+    "            self._shop_type = new_shop_type\n",
+    "        else:\n",
+    "            print(\"Shop Type Only {}\".format(', '.join(self.SHOP_TYPE_LIST)))\n",
+    "    \n",
+    "    @property\n",
+    "    def shop_type(self):\n",
+    "        return self._shop_type\n",
+    "    \n",
+    "\n",
+    "    @shop_type.setter\n",
+    "    def shop_type(self, new_shop_type):\n",
+    "        if new_shop_type in self.SHOP_TYPE_LIST:\n",
+    "            self._shop_type = new_shop_type\n",
+    "        else:\n",
+    "            print(\"Shop Type Only {}\".format(', '.join(self.SHOP_TYPE_LIST)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Resturant(Shop):\n",
+    "#     def show_info(self):\n",
+    "#         return \"Resturant{}\".format(\n",
+    "#             self.info[4:]\n",
+    "#         )\n",
+    "\n",
+    "    @property\n",
+    "    def info(self):\n",
+    "        return \"Restuarant{}\".format(super().info[4:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Restuarant (Subway)\n",
+      "\tType:resturant\n",
+      "\tAddress:Sung su\n"
+     ]
+    }
+   ],
+   "source": [
+    "subway = Resturant(\"Subway\", \"resturant\", \"Sung su\")\n",
+    "print(subway.info)\n",
+    "# shop_type is private"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shop (Subway)\n",
+      "\tType:resturant\n",
+      "\tAddress:Sung su\n"
+     ]
+    }
+   ],
+   "source": [
+    "subway = Shop(\"Subway\", \"resturant\", \"Sung su\")\n",
+    "subway.show_info()\n",
+    "# shop_type is private"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Shop (Subway)\\n\\tType:resturant\\n\\tAddress:Sung su'"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subway.info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Resturant(Shop):\n",
+    "    def __init__(self, name, rating, address):\n",
+    "        super().__init__(name, \"Resturant\", address)\n",
+    "        self.rating = rating\n",
+    "        \n",
+    "    @property\n",
+    "    def info(self):\n",
+    "        return \"Restuarant{}\\n\\tRating:{}\".format(super().info[4:],self.rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Restuarant (Subway)\n",
+      "\tType:Resturant\n",
+      "\tAddress:Sung su\n",
+      "\tRating:2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "subway = Resturant(\"Subway\", \"2.5\", \"Sung su\")\n",
+    "print(subway.info)\n",
+    "# shop_type is private"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
